[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/Sprites/Spirits/spirits_orange_death.png" type="Texture" id=1]
[ext_resource path="res://Misc/Health_Bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Sprites/Spirits/spirits_orange.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Spirits/Gold_Spirit.gd" type="Script" id=4]
[ext_resource path="res://Shaders/flash.tres" type="Shader" id=5]
[ext_resource path="res://Sound Effects/Hit 1.mp3" type="AudioStream" id=6]
[ext_resource path="res://Enemies/Enemy_Abstract_Class.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 25, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 75, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 25, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 50, 0, 25, 31 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 75, 0, 25, 31 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 6.0
height = 12.0

[node name="Gold_Spirit" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 11 )
frames = SubResource( 9 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 2 )
shape = SubResource( 10 )

[node name="Health_Bar" parent="." instance=ExtResource( 2 )]
margin_left = -50.0
margin_top = -20.0
margin_right = 50.0
margin_bottom = 20.0
rect_scale = Vector2( 0.3, 0.5 )

[node name="Position2D" type="Position2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Enemy_Abstract_Class" parent="." instance=ExtResource( 7 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
